--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <body>
 
     <header>
-      
       <section class="topbar">
         <nav class="hamburger-menu">
           <button type="button">
@@ -142,9 +141,7 @@
       <h3 class="results-header">Results</h3>
       <section class="all-products" id="all-products">
         <!-- Products -->
-        No products to show
-
-        
+        There are no products to display 
       </section>
 
       <section class="pages">
@@ -173,6 +170,6 @@
       </ul>
       <p>&copy; Copyright, 1970.<small>By Mehrnoush</small></p>
     </footer>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
