--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <header>
       <section class="topbar">
+        <h2></h2>
         <nav class="hamburger-menu">
           <button type="button">
             <i class="material-icons">menu</i>
@@ -139,13 +140,13 @@
       </fieldset>
 
       <h3 class="results-header">Results</h3>
+      <!-- Products -->
       <section class="all-products" id="all-products">
-        <!-- Products -->
-        There are no products to display 
+        <h2>There are no products to display</h2>
       </section>
 
       <section class="pages">
-        <p>1-6 of 28 products found</p>
+        <h3>1-6 of 28 products found</h3>
         <ul class="resultpages">
           <li class="active"><a href="#">1</a></li>
           <li><a href="#">2</a></li>
