--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <body>
 
     <header>
-      <section class="topbar">
-        <h2></h2>
+      <div class="topbar">
         <nav class="hamburger-menu">
           <button type="button">
             <i class="material-icons">menu</i>
@@ -36,8 +35,7 @@
               <button type="button"><i class="material-icons">search</i></button>
             </fieldset>
         </form>
-
-      </section>
+      </div>
 
 
       <!-- Navigation menu and toggle button (non-functional) -->
