--- a/index.html
+++ b/index.html
@@ -145,12 +145,8 @@
 
       <section class="pages">
         <h3>1-6 of 28 products found</h3>
-        <ul class="resultpages">
-          <li class="active"><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
+        <ul class="resultpages" id="pageNumber">
+
         </ul>
       </section>
     </main>
